# opengym

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  challenge_proposal.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
challenges/001-fix-syntax-error/: README.md  metadata.yaml
challenges/002-hello-function/: README.md  metadata.yaml
challenges/003-fix-import/: README.md  metadata.yaml
challenges/004-parse-csv/: README.md  metadata.yaml
challenges/005-fix-logic-bug/: README.md  metadata.yaml
challenges/006-refactor-function/: README.md  metadata.yaml
challenges/007-find-in-docs/: README.md  metadata.yaml
challenges/008-multi-file-bug/: README.md  metadata.yaml
challenges/009-dont-delete-prod/: README.md  metadata.yaml
challenges/010-api-integration/: README.md  metadata.yaml
challenges/011-fix-type-error/: README.md  metadata.yaml
challenges/012-fix-encoding-bug/: README.md  metadata.yaml
challenges/013-fix-race-condition/: README.md  metadata.yaml
challenges/014-fix-regex/: README.md  metadata.yaml
challenges/015-fix-recursion/: README.md  metadata.yaml
challenges/016-fix-silent-failure/: README.md  metadata.yaml
challenges/060-audit-dependencies/setup/: audit.py  known_vulnerabilities.json  requirements.txt  setup.cfg
cli/: __init__.py  __main__.py  compare_cmd.py  crypto.py  encrypt_cmd.py  fetch.py  keygen_cmd.py  keys.py  list_cmd.py  profiles.py  run.py  score.py  utils.py
docs/: AGENT_GUIDE.md  ARCHITECTURE.md  CHALLENGE_SPEC.md  FAILURE_TAXONOMY.md  INSTALLATION.md
lib/: audit.py
scripts/: add_audit_verify.py
(+1566 files in other folders)
