[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opengym-ai"
version = "0.2.0"
description = "127 challenges to test if your AI agent actually works — not just the model, but the infrastructure."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "OpenGym Contributors"},
]
keywords = ["ai", "agents", "benchmark", "testing", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "pytest>=7.0",
]

[project.scripts]
opengym = "cli.__main__:main"

[project.urls]
Homepage = "https://github.com/opengym-ai/opengym"
Repository = "https://github.com/opengym-ai/opengym"

[tool.setuptools.packages.find]
include = ["cli*"]
