[metadata]
name = myproject
version = 1.0.0
description = A sample project
author = Dev Team

[options]
python_requires = >=3.9
install_requires =
    flask==2.3.3
    requests==2.28.0
    sqlalchemy==2.0.0
    celery==5.2.7
    redis==4.5.1
    pydantic==2.0.0
    boto3==1.26.100
    numpy==1.24.2
    cryptography==40.0.0
    pyyaml==6.0
    jinja2==3.1.2
    click>=8.0
    httpx==0.24.0

[options.extras_require]
dev =
    pytest>=7.0
    black
    isort
    mypy
